2002-05-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gdnc.m: Make gdnc log to syslog by default, and close
	stdin, stdout, stderr to run as daemon.
	* Source/NSUser.m: Restructured path generation code slightly.
	Added support for system-wide .GNUsteprc with force options.
	Removed use of FORCE_USER_ROOT and FORCE_DEFAULTS_ROOT
	* Source/Base/gsdoc: Document the .GNUsteprc files.
	* Source/NSArray.m: Fix bug with GC pointed out by James Knight

2002-05-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSHTTPURLHandle.m: Insert port information to URL passed
	to proxy.

2002-05-09  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSBundle.m
	Use fileSystemRepresentation instead of cString to get the file 
	name to load. 
	
2002-05-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSTask.m: When launching under windoze, don't forget to
	use the fileSystemRepresentation of the program name.

2002-05-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSXML.m: Fix function prototype ... gets rid of
	compiler warning.
	* Source/GNUmakefile: remove o_vscanf.c ... unused
	* Source/o_vscanf.c: remove unused file.
	* Source/mframe.m: Fix compiler warning about unused function.
	* Source/GSFormat.m: Fix compiler warning about unused var.
	* Source/NSDebug.m: Fix compiler warning about unused var.
	* Source/externs.m: Fix compiler warnings ... move some exceptions
	to source files relating to where they are declared.
	* Source/NSArchiver.m: define exception.
	* Source/NSConnection.m: define exception.
	* Source/NSPort.m: define exception.
	* Tools/gdomap.c: Remove unused variable (log_perror).

2002-05-07  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Make all AC_DEFINES define 1
	* config/objc-con-autoload.m4: Idem.
	* config/objc-sys-dynamic.m4: Idem.

2002-05-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUser.m: mingw path fixes and debugging
	* Source/NSFileManager.m: ditto

2002-05-06  Adam Fedor  <fedor@gnu.org>
