@@ -88,7 +88,6 @@ __objc_class_name_GSSAXHandler
 __objc_class_name_GSXMLAttribute
 __objc_class_name_GSXMLDocument
 __objc_class_name_GSXMLDummy
-__objc_class_name_GSXMLHandler
 __objc_class_name_GSXMLNamespace
 __objc_class_name_GSXMLNode
 __objc_class_name_GSXMLParser
